Update the POM file